syntax = "proto3";

package user;

service UserService {
  rpc FindAll (EmptyReq) returns (Users) {}
}

message EmptyReq {}

message Users {
  string users = 1;
}